organisation des composants

--- a/src/app/historique/historique.component.html
+++ b/src/app/historique/historique.component.html
@@ -2,7 +2,7 @@
   <h2 class="mb-4 text-center">Quiz History</h2>
   <div *ngFor="let h of history" class="card mb-3 history-item">
     <div class="card-body">
-      <p class="mb-0"><i class="bi bi-calendar-event me-2"></i>{{ h.date }} - Score: {{ h.score }}/{{ h.total }} - Category: {{ h.category }} - Difficulty: {{ h.difficulty }}</p>
+      <p class="mb-0"><i class="bi bi-calendar-event me-2"></i>{{ h.date }} -Name: {{h.username}} - Score: {{ h.score }}/{{ h.total }} - Category: {{ h.category }} - Difficulty: {{ h.difficulty }}</p>
     </div>
   </div>
 </div>
